// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`attributes-compiler on compile multiple reactive expressioons in attribute value 1`] = `
"element.setAttribute('foo', \`\${ state.hey } and \${ state.blah }\`);
REACTIVE_COMPILER_PART;"
`;

exports[`attributes-compiler on compile reactive expressioon attribute 1`] = `
"element.setAttribute('foo', \`\${ state.hey }\`);
REACTIVE_COMPILER_PART;"
`;

exports[`attributes-compiler on compile simple attributes 1`] = `
"element.setAttribute('foo', \`bar\`);
element.setAttribute('bar', \`foo\`);"
`;
